# MarinSpin

./: .gitignore  ISSUES.md  README.md  index.html  pyproject.toml
analysis/: build_enriched.py  error_breakdown.py  poster_style.py  quench_montage.py  rate_field_showcase.py  replot_all.py  sharpness_test.py  test_kv.py  time_kv.py  triptych.py  upload_hotmix.py  watch_final.py  watch_tokenize.py  xi_clean.py  xi_vs_temp.py
assets/: index-D35vS7Vc.js  index-YZOO6Vwk.css
data/: SCHEMA.md  models.json
data/marinspin/: index.json
data/marinspin/checkpoints/0/sentences/s0/: trace-0.json  trace-1.json  trace-10.json  trace-100.json  trace-11.json  trace-12.json  trace-13.json  trace-14.json  trace-15.json  trace-16.json  trace-17.json  trace-18.json  trace-19.json  trace-2.json  trace-20.json  trace-21.json  trace-22.json  trace-23.json  trace-24.json  trace-25.json  trace-26.json  trace-27.json  trace-28.json  trace-29.json  trace-3.json  trace-30.json  trace-31.json  trace-32.json  trace-33.json  trace-34.json  trace-35.json  trace-36.json  trace-37.json  trace-38.json  trace-39.json  trace-4.json  trace-40.json  trace-41.json  trace-42.json  trace-43.json  (+61 more)
docs/: levanter-epoch-reshuffle.patch  open-issues.sh
poster/: poster.tex
slides/: motivation_slides.md  talk.html  talk.md  talk_marp.md
src/marin_spin/: augment.py  calibrate_grug.py  compare_bkl.py  corr_anisotropy.py  data.py  dist_vs_bkl.py  ising_tokenizer.py  kv_decode.py  launch.py  launch_tokenize.py  probs_vs_bkl.py  raster_anisotropy.py  raster_edge_error.py  rate_by_locality.py  rollout_quench.py  tokenize_ising.py
src/marin_spin/grug/: launch.py  train.py
