[project]
name = "marin-spin"
version = "0.1.0"
description = "Can a transformer learn 2D-Ising kinetic Monte-Carlo coarsening dynamics? Built on Marin."
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- Marin consumed as a library, from PyPI (nightly dev channel) ---
    "marin-levanter==0.2.27.dev202606250842",  # JAX training lib; also provides levanter.grug.*
    "marin-haliax==0.2.27.dev202606250842",    # named-axis arrays (haliax.partitioning)
    "marin-core==0.2.27.dev202606250842",      # marin.execution.*, marin.processing.tokenize, marin.training
    "marin-fray==0.2.27.dev202606250842",      # fray.cluster / fray.types job dispatch
    # --- third-party (most come transitively via levanter) ---
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "equinox",
    "jax",
]

# marin-* are published to PyPI as a nightly DEV channel (no stable semver yet), so we pin an
# exact dev build for reproducibility and allow prereleases.
# BLOCKER: no published marin-levanter contains the `epoch_reshuffle` feature this project
# requires (it was never committed upstream) — see ISSUES.md #1.
[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marin_spin"]
